--- a/css/style.css
+++ b/css/style.css
@@ -1624,6 +1624,18 @@ ul.scroll-list {
 	position: relative;
 	z-index: 50!important;
 }
+#camp-ca .fancybox {
+	position: relative;
+}
+#camp-ca .col-md-6 .full-screen-icon {
+	position: absolute;
+	bottom: 16px;
+	left: 8px;
+	width: 45px;
+	height: auto;
+	z-index: 100!important;
+	box-shadow: none;
+}
 
 /* Slideshow/Accordion Styles */
 
