--- a/css/style.css
+++ b/css/style.css
@@ -1627,14 +1627,36 @@ ul.scroll-list {
 #camp-ca .fancybox {
 	position: relative;
 }
-#camp-ca .col-md-6 .full-screen-icon {
-	position: absolute;
-	bottom: 16px;
-	left: 8px;
+#camp-ca .col-md-6 .fancybox .full-screen {
+	background-color: rgba(255,255,255,.7);
+	height: 45px; 
 	width: 45px;
-	height: auto;
+	border-radius: 50%;
+	position: absolute;
+	bottom: 52px;
+	left: -44px;
 	z-index: 100!important;
+	opacity: .8;
+	transition: all .5s ease-in-out;
+}
+#camp-ca .col-md-6 .fancybox .full-screen .full-screen-wrap {
+	position: relative;
+	height: 45px; 
+	width: 45px;
+}
+#camp-ca .col-md-6 .fancybox .full-screen .full-screen-wrap img {
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
 	box-shadow: none;
+	margin: 0;
+	padding: 9px;
+}
+#camp-ca .col-md-6 .fancybox .full-screen:hover {
+	opacity: 1;
+	background-color: rgba(255,255,255,.8);
 }
 
 /* Slideshow/Accordion Styles */
