--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 	width: 100%;
 	height: 62px;
 	background-color: rgba(0,0,0,1);
-	z-index: 9999 !important;
+	z-index: 9998 !important;
 	padding: 10px 55px;
 	text-align: center;
 	font-family: "brandon-grotesque",sans-serif;
@@ -1929,6 +1929,29 @@ ul.scroll-list {
 #footer .dvdr {
 	color: #fff;
 	display: inline-block;
+}
+
+/* Preloader */
+#preloader {
+	position: fixed;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	background-color: #57c1e9; /* change if the mask should be a color other than white */
+	z-index: 9999 !important;
+}
+
+#status {
+	width:200px;
+	height:200px;
+	position:absolute;
+	left:50%; /* centers the loading animation horizontally on the screen */
+	top:50%; /* centers the loading animation vertically on the screen */
+	background-image:url(../assets/status.gif); /* path to your loading animation */
+	background-repeat:no-repeat;
+	background-position:center;
+	margin:-100px 0 0 -100px; /* is width and height divided by two */
 }
 
 /* Utility Styles*/
