Fixed Last Circle

--- a/css/style.css
+++ b/css/style.css
@@ -1387,6 +1387,7 @@ ul.scroll-list {
 
 #last-circle {
 	background-image: url(../images/article_roadtrip/road_map_7.gif);
+	margin-bottom: 0;
 }
 
 .circle-bg-6 {
