--- a/css/style.css
+++ b/css/style.css
@@ -1964,19 +1964,6 @@ ul.scroll-list {
 	height: 100%;
 	width: 100%;
 }
-
-/*#status {
-	width:200px;
-	height:200px;
-	position:absolute;
-	left:50%; 
-	top:50%; 
-	background-image:url(../assets/status.gif); 
-	background-repeat:no-repeat;
-	background-position:center;
-	margin:-100px 0 0 -100px;
-}*/
-
 #status {
 	position:absolute;
 	left:50%; 
@@ -1998,6 +1985,11 @@ ul.scroll-list {
 	letter-spacing: 1px;
 	margin-top: 95px;
 	padding: 0 0 30px 0;
+}
+@-webkit-keyframes bounce
+{
+  50%  {transform: translatey(-20px);}
+  100% {transform: translatey( 20px);}
 }
 @keyframes bounce
 {
@@ -2021,16 +2013,19 @@ ul.scroll-list {
   animation: bounce 1s ease-in-out infinite;
   position: absolute;
   top: 0;
+  -webkit-transform: translatey(20px);
+  -ms-transform: translatey(20px);
   transform: translatey(20px);
-  
 }
 
 .bounce div:first-of-type {
   left: -20px;
+  -webkit-animation-delay: 0.20s;
   animation-delay: 0.20s;
 }
 
 .bounce div:nth-of-type(2) {
+  -webkit-animation-delay: 0.10s;
   animation-delay: 0.10s;
 }
 
