Media query added to full screen icon

--- a/css/style.css
+++ b/css/style.css
@@ -1956,7 +1956,7 @@ img.lazy {
 	h5 {font-size: 23px;}
 	.hideContentWrap {width: 1250px;}
 	.container-fluid.article h1 {padding-top: 250px;}
-	
+	#camp-ca .col-md-6 .fancybox .full-screen {bottom:55px;}
 }
 
 
