--- a/css/style.css
+++ b/css/style.css
@@ -2320,9 +2320,8 @@ img.lazy {
 	#article-roadtrip .scroll-list .col-md-6 {margin-left: 0; margin-right: 0; padding: 0;}
 	#article-roadtrip .row:nth-of-type(2) {margin-bottom: -150px;}
 	#article-roadtrip .scroll-list-box {margin-top: 200%;}
-	#article-roadtrip .scroll-list-box:last-of-type {margin-top: 90%;}
+	#mobile-fix-1 {margin-top: 400%;}
 	#article-roadtrip li {height: 200%; margin-left: 0; margin-bottom: 100%}
-	#article-roadtrip li:last-of-type {margin-bottom: 0}
 	.parallax-bg__myers, .parallax-bg__founders-grove, .parallax-bg__eternal-tree-house{background-image: none; box-shadow: none;}
 	#article-roadtrip .caption {display: none;}
 	#article-roadtrip .stop-name {padding: 0 25px; font-size: 18px;}
